--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="/HTML/css/style.css">
+
 
 <head>
     <meta charset="UTF-8">
@@ -18,9 +20,10 @@
         <label>Your Message</label><br>
         <textarea rows="10" cols="30" name="Email" id="">
             </textarea>
-<br>
+        <br>
 
-<input type="submit" name="Submit" id="">
- </form>
+        <input type="submit" name="Submit" id="">
+    </form>
 </body>
+
 </html>
