--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="stylesheet" href="/HTML/css/style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
         <tr>
             <td>
 
-                <img src="https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTUxNzIxODgzNTg5NDIwMzAw/pewdiepie_gettyimages-501661286.jpg"
+                <img src="https://avatars2.githubusercontent.com/u/45093565?s=400&u=04335a6862b30574d4a0a734ffb899819a44243e&v=4"
                     alt="">
             </td>
             <td>
