--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="/HTML/css/style.css">
+<link rel="stylesheet" href="css/style.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +13,7 @@
         <tr>
             <td>
 
-                <img src="https://avatars2.githubusercontent.com/u/45093565?s=400&u=04335a6862b30574d4a0a734ffb899819a44243e&v=4"
-                    alt="">
+                <img src="https://avatars2.githubusercontent.com/u/45093565?s=400&u=04335a6862b30574d4a0a734ffb899819a44243e&v=4" alt="">
             </td>
             <td>
 
